# secure-webapp-2021

./: README.md
.github/workflows/: sonar.yml
backend/: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  main.cpp
backend/doc/: CAFF.txt  CIFF.txt
backend/include/parser/: CAFF.hpp  Color.hpp
backend/src/main/resources/: application.properties
backend/src/parser/: CAFF.cpp  CIFF.cpp
diagrams/component/: backend.drawio  dataflow.drawio  integrity.drawio  use-cases  use-cases.drawio
diagrams/sequence/: README.md  admin.txt  authenticaton.txt  caff.txt  registration.txt  user.txt
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/api/: api-configuration.ts  api.module.ts  models.ts  services.ts
frontend/src/app/comment/: comment.component.html  comment.component.scss  comment.component.ts
frontend/src/app/login/: login.component.html  login.component.scss  login.component.ts
frontend/src/app/media/: media.component.html  media.component.scss  media.component.ts
parser/: CMakeLists.txt  README.md  SampleOutputs.md  main.cpp
parser/examples/in/: creator_overflow.caff  tag_overflow.caff
parser/include/: JNI.h  JavaBindings.h
parser/include/parser/: CAFF.hpp  CIFF.hpp
parser/lib/gif-h/: README.md  gif.h
parser/src/: JNI.cpp  JavaBindings.cpp
parser/src/parser/: CAFF.cpp  CIFF.cpp
(+67 files in other folders)
